# Openaibot

./: .dockerignore  .env.example  .env.exp  .gitignore  .nerve.toml  .pre-commit-config.yaml  API.md  APIServer.py  CITATION.cff  CLAUSE  CLAUSE.md  CONTRIBUTING.md  Dockerfile  EULA.md  LICENSE  NOTICE  NOTICE.MD  NOTICE.md  README.EN.md  README.md  README_CN.md  README_EN.md  README_WeChat.md  README_WeChat_zh.md  README_ZH.md  SECURITY.md  analysis.json  case_server.py  config.py  deploy.sh  docker-compose.yml  docker-setup.sh  main.py  plugins_manager.py  pm2.json  prompt_server.py  pyproject.toml  requirements.txt  schema.py  server_base_client.py  (+7 more)
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: docker-ci-dev.yml  docker-ci.yaml  publish.yml  python_test.yml  python_test.yml.ignore  release.yml  release_draft.yml  ruff.yml
API/: FakeMessage.py  LangDetect.py  Signature.py  Voice.py  Whitelist.py  config.toml
App/: BaseServer.py  Controller.py  Discord.py  Event.py  EventServer.py  Lumi.py  QController.py  QQ.py  QQChannel.py  Server.py  Telegram.py  TelegramController.py  WeChat.py  chatGPT.py
Assistants/: Hi-Coco_en_linux_v2_1_0.ppn  LICENSE.txt  __init__.py  client.py  install.md  main.py  requirements.txt
Assistants/model/: __init__.py  chat.py  recognize.py  spark.py
Assistants/test/: rec.py  test.py
Assistants/utils/: rec.py
Component/: __init__.py
Component/cache/: Bucket.py  __init__.py  bucket.py
Component/censor/: Censor.py  __init__.py  censor.py
Component/data/: __init__.py  file.py  mongo.py
Component/langdetect_fasttext/: __init__.py
Component/sign_api/: Signature.py  __init__.py
Component/vitality/: __init__.py  trigger.py
Config/: app_exp.toml  config.json  service_exp.json
Data/: Danger.form
Data/sticker/: readme.md
Handler/: Manager.py  RateLimiter.py  Reader.py  TTS.py  manager.py  profile.py  rate_limiter.py  reader.py  tts.py
app/: _exception.py  const.py  schema.py  tutorial.py
app/components/: __init__.py  credential.py
app/middleware/: llm_task.py
app/receiver/: app.py  aps.py  function.py  receiver_client.py
app/sender/: app.py  schema.py  util_func.py
app/setting/: __init__.py  database.py  discord.py  kook.py  rabbitmq.py  slack.py  telegram.py
assert/: plugin.py
cache/: base.py  elara.py  redis.py
config_dir/: llm.toml  provider.toml
docs/: API.md  Release.MD  app.md  app_auth.md  auth.md  design_rule.md  func_call.md  refer.md  resign.md
docs/Note/: assistant.md  bot.md
docs/dev_note/: chat_start.md  hook.md  time.md  tool_call_restart.md
docs/note/: app.md  app_auth.md  design_rule.md  func_call.md  release.md  resign.md
docs/schema_exp/: openai_response.py
docs/test/: bilibili.py  discord.py  duckduck.py  note_openai_req.py  note_pydantic_class_or_subclass.py  survey_khl_lib.py  trash_cluster_usage.py  trash_mongodb_class.py  trash_transfer_note.py
docs/test_script/: exp_from_nonebot.py  funtion.py  note_emoji_regex.py  note_github_bot.py  note_github_bot_test.py  note_kook_usage.py  note_match_re.py  note_openai_req.py  note_pydantic_alias_usage.py  pydantic_debug.py  pydantic_feat.py  pydantic_function.py  pydantic_mo.py  survey_arg_parse.py  survey_arg_parser.py  survey_chatglm_tokenzier.py  survey_khl_lib.py  test_choice_in_sh.sh  trash_transfer_note.py
fatlangdetect/: detect.py
langdetect/: langdetect.py
langdetect_kira/: __init__.py
llmbot/: __init__.py  schema.py
llmbot/cache/: elara.py  redis.py
llmbot/middleware/: __init__.py  llm_task.py
llmbot/receiver/: app.py  function.py
llmbot/sdk/: __init__.py  network.py  schema.py
llmbot/sender/: app.py  rss.py
llmbot/setting/: task.py  telegram.py
llmbot/task/: schema.py
llmkira/: __init__.py  _exception.py  error.py  schema.py  tutorial.py  utils.py
llmkira/cache/: __init__.py  elara.py  elara_runtime.py  lmdb_runtime.py  mongo.py  redis.py  redis_runtime.py  runtime_schema.py
llmkira/doc_manager/: __init__.py
llmkira/extra/: __init__.py  voice_hook.py
llmkira/kv_manager/: _base.py  env.py  file.py  instruction.py  time.py  tool_call.py
llmkira/logic/: __init__.py
llmkira/memory/: __init__.py  _base.py  local_storage.py
llmkira/middleware/: llm_provider.py  llm_task.py  llm_tool.py
llmkira/openai/: __init__.py  _excption.py  cell.py  request.py  utils.py
llmkira/receiver/: __init__.py  app.py  aps.py  function.py  receiver_client.py  schema.py
llmkira/sdk/: __init__.py  adapter.py  error.py  network.py  schema.py  utils.py
llmkira/sender/: app.py  rss.py  schema.py  (+1 more)
middleware/: __init__.py  llm_task.py
openai_async/: __init__.py  network.py  requirements.txt
openai_kira/: __init__.py  requirements.txt
openai_sync/: __init__.py  api_url.json  chat.py  network.py
playground/: hooks.py  jsonf.py  token.py
plugins/: __init__.py  alarm.py  bilibili.py  search.py  sticker.py  translate_doc.py
receiver/: app.py  aps.py  auth.py  child.py  function.py
sdk/: error.py  func_call.py  network.py  schema.py  utils.py
sender/: __init__.py  app.py  rss.py
setting/: __init__.py  task.py
task/: __init__.py
test/: Apitest.py  api_test.py  apitest.py  azure_tts.py  azure_tts_test.py  bilibili.py  blip_server_test.py  blip_test.py  blip_transformers.py  broswer_test.py  chatGPT.py  data_k.py  duckduck.py  duckgo.py  emoji_test.py  entry_point.py  examples.py  func_call.py  funtion.py  inpoint.py  lang.py  len.py  nlp.py  nlp_server_test.py  nlp_test.py  nltk_test.py  openai.py  playground.py  pyabsa_test.py  rabbit.py  rabbit_rev.py  redis_l.py  rss.py  test.sh  test_chain_box.py  test_config.py  test_data.py  test_external.py  test_file.py  test_manager.py  (+9 more)
test_feature/: blip_server_test.py  emoji_test.py  info_test.py  vits_nlp_test.py
tests/: pydantic_error.py  test_chain_box.py  test_file.py  test_router.py
utils/: Base.py  Blip.py  Chat.py  Data.py  Detect.py  Error.py  Frequency.py  Lock.py  Logging.py  Network.py  Schedule.py  Setting.py  Sticker.py  TTS.py  base.py  chat.py  data.py  error.py  lock.py  network.py  sticker.py
(+224 files in other folders)
