[tool.poetry]
name = "llmkira"
version = "0.27.1"
description = "A chain message bot based on OpenAI"
authors = ["llmkira <me@dianas.cyou>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://llmkira.github.io/Docs/"
repository = "https://github.com/LlmKira/Openaibot"
keywords = ["llmbot", "llmkira", "openai", "chatgpt", "telegram", "bot"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
]
packages = [{ include = "llmkira" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pathlib = ">=1.0.1"
pydantic = ">=2.0.0"
loguru = ">=0.5.3"
httpx = "0.24.1"
socksio = "^1.0.0"
python-dotenv = "^1.0.0"
redis = ">=4.5.4"
aio-pika = "^9.3.0"
arclet-alconna = "^1.7.26"
shortuuid = "^1.0.11"
tiktoken = "^0.5.1"
nest-asyncio = "^1.5.8"
contextvars = "^2.4"
pytz = "^2023.3.post1"
numpy = "^1.24.0"
fasttext-wheel = "^0.9.2"
tenacity = "^8.2.3"
pysocks = "^1.7.1"
flask-sqlalchemy = "^3.1.1"
emoji = "^2.8.0"
websocket = "^0.2.1"
wrapt = "^1.11.0"
motor = "^3.3.1"
dynaconf = "^3.2.3"
rich = "^13.6.0"
importlib-metadata = "^6.8.0"
sentry-sdk = "^1.34.0"
boltons = "^23.1.1"
orjson = "^3.9.10"
pydantic-settings = "^2.0.3"
docstring-parser = "^0.15"
polling = "^0.3.2"
elara = "^0.5.5"
apscheduler = "^3.10.4"
tzlocal = "^5.2"
nltk = "^3.8.1"
jieba = "^0.42.1"
scikit-learn = "^1.3.2"
cjieba = "^0.4.4"
unstructured = { extras = ["docx", "pptx"], version = "^0.10.30" }
requests = { extras = ["socks"], version = "^2.31.0" }
feedparser = "^6.0.10"
pillow = "^10.1.0"
inscriptis = "^2.3.2"
aiohttp = "^3.8.6"
pytelegrambotapi = { version = "^4.14.0" }
# 暂时还是必须的
hikari = { version = "^2.0.0.dev121", optional = true }
hikari-crescent = { version = "^0.6.4", optional = true }
khl-py = { version = "^0.3.17", optional = true }
slack-bolt = { version = "^1.18.0", optional = true }

[tool.poetry.extras]
bot = ["hikari", "hikari-crescent", "khl-py", "slack-bolt"]
all = ["hikari", "hikari-crescent", "khl-py", "slack-bolt"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
